--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -3,8 +3,8 @@
   --open-sans: 'Open Sans', sans-serif;
   --bungee: 'Bungee Shade', cursive;
   --graduate: 'Graduate', cursive;
-  --card-height: 15rem;
-  --card-width: calc(var(--card-height) * .727278)
+  --card-height: calc(var(--card-width) / .727278);
+  --card-width: 12vw;
 }
 
 html {
