--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,10 +1,11 @@
 :root {
-  --righteous: 'Righteous', cursive;
+  --monoton: 'Monoton', cursive;
+  --yellowtail: 'Yellowtail', cursive;
   --open-sans: 'Open Sans', sans-serif;
-  --graduate: 'Graduate', cursive;
   --card-height: calc(var(--card-width) / .727278);
   --card-width: 12vw;
-  --nav-font-size: calc(10px + (20 - 10) * (100vw - 400px) / (1600 - 400));
+  --nav-font-size: calc(15px + (30 - 15) * (100vw - 400px) / (1600 - 400));
+  --large-font-size: calc(15px + (24 - 15) * (100vw - 400px) / (1600 - 400));
   --orange: coral;
   --blue: #16dcdc;
   --green: #5cea42;
@@ -56,4 +57,20 @@ nav ul, nav li {
 
 nav li {
   list-style-type: none;
+  align-items: center;
+}
+
+a {
+  text-decoration: none; 
+  transition: all .25s ease;
+}
+
+a:visited {
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none; 
+  color: aqua;
+  transition: all .25s ease;
 }
