--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -6,9 +6,10 @@
   --card-width: 12vw;
   --nav-font-size: calc(15px + (30 - 15) * (100vw - 400px) / (1600 - 400));
   --large-font-size: calc(15px + (24 - 15) * (100vw - 400px) / (1600 - 400));
-  --orange: coral;
-  --blue: #16dcdc;
+  --bright-coral: #ff4c4c;
+  --blue: #007bff;
   --green: #5cea42;
+  --black: #1a1a1a;
 }
 
 html {
@@ -20,15 +21,15 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  font-weight: 400;
 }
 
 body {
   background-color: #1a1a1a; 
   color: white;
-  font-family: var(--open-sans);
+  font-family: var(--monoton);
   font-size: 16px;
   margin: 0;
-  font-weight: 400;
 }
 
 h1, h2, h3 {
@@ -36,18 +37,18 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: calc(2rem + (3 - 2) * (100vw - 400px) / (1600 - 400));
-  line-height: 1.85rem;
+  font-size: calc(2.25rem + (3.25 - 2.25) * (100vw - 400px) / (1600 - 400));
+  line-height: 2.25rem;
 }
 
 h2 {
-  font-size: calc(1.5rem + (2.5 - 1.5) * (100vw - 400px) / (1600 - 400));
-  line-height: 1.6rem;
+  font-size: calc(2rem + (3 - 2) * (100vw - 400px) / (1600 - 400));
+  line-height: 2.15rem;
 }
 
 h3 {
-  font-size: calc(1.25rem + (2.25 - 1.25) * (100vw - 400px) / (1600 - 400));
-  line-height: 1.35rem;
+  font-size: calc(1.5rem + (2.5 - 1.5) * (100vw - 400px) / (1600 - 400));
+  line-height: 1.55rem;
 }
 
 nav ul, nav li {
@@ -55,8 +56,11 @@ nav ul, nav li {
 }
 
 nav li {
-  list-style-type: none;
   align-items: center;
+}
+
+li {
+  list-style: none;
 }
 
 a {
@@ -73,4 +77,8 @@ a:hover {
   text-decoration: none; 
   color: aqua;
   transition: all .25s ease;
+}
+
+p {
+  font-family: var(--open-sans);
 }
